Es wurden folgende Features hinzugefügt: -Password wird verschlüsselt persistiert -Benutzer erhält beim Login ein JWT Token -Sämtliche Excpetions wurden erstellt und werden korrekt abgefangen -API Tests wurde via .http Files gemacht -Lombok wurde hinzugefügt